--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,7 @@
                         <tr>
                             <td><small>${item.OriginalURL}</small></td>
                             <td>
-                                <a href="${API_BASE}/${item.ShortURL}" target="_blank" class="short-url">
+                                <a href="${item.ShortURL}" target="_blank" class="short-url">
                                     /${item.ShortURL}
                                 </a>
                             </td>
