--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,7 @@
                             <td><small>${item.OriginalURL}</small></td>
                             <td>
                                 <a href="${item.ShortURL}" target="_blank" class="short-url">
-                                    /${item.ShortURL}
+                                    ${item.ShortURL}
                                 </a>
                             </td>
                         </tr>
