--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://api.yaharuott.ru'; 
+        const API_BASE = 'https://api.yaharuott.ru'; 
 
         // 1. POST api/create
         async function createUrl() {
